{{$NEXT}}
   - better documentation for `drain`
   - slight enhancements to the docs
   - `factory` in `dispatch` now goes through `tubify`
   - moved validator `with_subs` to `thoroughly`, also extended

0.732  2016-05-13 22:58:40 CEST
   - release after 100 PASSes in CPAN Testers (thanks!)
   - documented tap type `bucket`

0.731  2016-05-12 09:41:34 CEST
   - upgraded dependency for Template::Perlish (no STDOUT clobbering)
   - documented "value" in parse_by_format
   - added tap type `bucket`

0.730  2016-05-03 22:08:39 CEST
   - added note about workaround in documentation for Parser
   - added test for package variable cleanup

0.729001  2016-05-02 23:09:55 CEST
   - fixed bug in handling regexes as "value" in parsers
   - workaround for pre-5.18 perl

0.729  2016-05-01 23:00:31 CEST
   - tubergen-generated scripts are now easier to write and use
   - with_template_perlish: templates in records
   - with_template_perlish: code ref can return array ref for read_file
   - tubify: "false" tube specifications are now ignored
   - added caching facilities
   - added trim and using it in by_format, by_separators and by_split
   - expanded by_format and by_separators to accept escaped or quoted
     strings
   - by_separators now can accept regular expressions as separators
   - added by_value_separator

0.728  2016-04-18 18:29:10 CEST
   - by_split and by_separators accept missing $keys now
   - updated missing functions for default argument, where possible
   - perltidy

0.727001  2016-04-17 23:38:04 CEST
   - moved read_file in D::T::Util, preserved backwards compatibility
   - added read_file_maybe
   - read_file uses normalize_filename
   - simplified interface for writers
   - write_to_files defaults to standard output

0.727  2016-04-17 18:41:03 CEST
   - embedded Mo and Mo::default in tubergen
   - generalized_hash and ghashy tube factory
   - simplified usage of render_with_template_perlish

0.726  2016-04-12 23:32:31 CEST