@@ -8,3 +8,8 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
+before_install:
+  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - source ~/travis-perl-helpers/init
+  - build-perl
+  - perl -V
